--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.gun.mert.yemeklist"
         minSdkVersion 15
         targetSdkVersion 25
-        versionCode 5
-        versionName "1.3"
+        versionCode 7
+        versionName "1.5"
         multiDexEnabled true
     }
     buildTypes {
@@ -34,8 +34,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'org.jsoup:jsoup:1.7.3'
-    compile 'com.android.support:design:23.1.1'
+    compile 'com.android.support:design:25.3.1'
     compile 'com.github.medyo:android-about-page:1.2'
-    compile 'com.google.android.gms:play-services-ads:11.0.0'
+    compile 'com.google.android.gms:play-services-ads:11.0.2'
     testCompile 'junit:junit:4.12'
 }
+apply plugin: 'com.google.gms.google-services'
